--- a/sass/base/_basic.scss
+++ b/sass/base/_basic.scss
@@ -8,9 +8,25 @@ body {
     margin-right: auto;
     padding-right: 15px;
     padding-left: 15px;
-    }
+
+    @media screen and (min-width: 480px) {
+        width: 480px;
+      }
+    
+      @media screen and (min-width: 768px) {
+        width: 768px;
+      }
+    
+      @media screen and (min-width: 1200px) {
+        width: 1200px;
+      }
+}
 .section {
     padding: 94px 0;
+
+    @media screen and (max-width: 1199px) {
+        padding: 60px 0;
+      }
 }
 h1,
 h2,
