--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -9,6 +9,11 @@
 }
 .clients {
     display: flex;
+
+    @media screen and (min-width: 480px) {
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
 .clients__item {
     width: 170px;
@@ -17,6 +22,9 @@
 
     &:last-child {
         margin-right: 0;
+    }
+    @media screen and (min-width: 480px) {
+        margin-bottom: 30px;
     }
 }
 
