--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -10,9 +10,11 @@
 .clients {
     display: flex;
 
-    @media screen and (min-width: 480px) {
+    @media screen and (max-width: 767px) {
         display: flex;
         flex-wrap: wrap;
+        justify-content: center;
+
     }
 }
 .clients__item {
@@ -20,12 +22,30 @@
     height: 92px;
     margin-right: 30px;
 
-    &:last-child {
-        margin-right: 0;
+   
+    @media screen and (max-width: 767px) {
+        width: calc((100% - 30px) / 2);
+        height: 90px;
+       
+        &:last-child {
+            margin-right: 0;
+        }
     }
-    @media screen and (min-width: 480px) {
-        margin-bottom: 30px;
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        width: calc((100% - 60px) / 3);
+
+        &:last-child {
+            margin-right: 0;
+        }
     }
+    @media screen and (min-width: 1200px) {
+        width: calc((100% - 5 * 30px) / 6);
+        
+        &:last-child {
+            margin-right: 30px;
+        }
+    }
+
 }
 
 .clients__link {
