--- a/sass/components/_main-index.scss
+++ b/sass/components/_main-index.scss
@@ -135,10 +135,22 @@
 }
 .advantages {
     @media screen and (min-width: 768px) {
-        display: block;
+        display: flex;
+        flex-wrap: wrap;
       }
       @media screen and (min-width: 1200px) {
         display: flex;
+      }
+}
+.advantages__item {
+    @media screen and (max-width: 767px) {
+        margin-right: 0;
+      }
+      @media screen and (min-width: 1200px) {
+        margin-right: 30px;
+        &:last-child {
+            margin-right: 0;
+        }
       }
 }
 
@@ -248,9 +260,7 @@
     -ms-flex-pack: center;
      justify-content: center;
 }
-.section-team {
-    background-color: $background-team;
-}
+
 .section__title {
     color: $color-text;
     font-size: 36px;
@@ -264,28 +274,29 @@
     background-color: $background-team;
 }
 .team {
-    background-color: $background-team;
     @media screen and (min-width: 768px) {
         display: flex;
         flex-wrap: wrap;
-        background-color: $background-team
       }
       @media screen and (min-width: 1200px) {
         display: flex;
-        background-color: $background-team
       }
 }
 .team__item {
-    margin-right: 30px;
+    margin-bottom: 30px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
-    background-color: $background-team;
+    background-color: $title-color;
 
-    &:last-child {
-        margin-right: 0;
-    }
-    @media screen and (min-width= 480px) {
+    @media screen and (max-width: 480px) {
         width: 100%;
+    }
+    @media screen and (min-width: 1200px) {
+        width: 270px;
+        margin-right: 30px;
+        &:last-child {
+            margin-right: 0;
+        }
     }
 }
 
