--- a/css/main.css
+++ b/css/main.css
@@ -581,21 +581,52 @@
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  margin-bottom: 50px;
+  /*justify-content: center;
+    margin-bottom: 50px;*/
+}
+
+@media screen and (max-width: 767px) {
+  .filter {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin-bottom: 40px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .filter {
+    margin-bottom: 50px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
 }
 
 .filter__item {
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin-right: 8px;
+  /* align-items: center;
+    margin-right: 8px;
+    &:last-child {
+        margin-right: 0;
+    }*/
 }
 
-.filter__item:last-child {
-  margin-right: 0;
+@media screen and (max-width: 767px) {
+  .filter__item {
+    margin-right: 8px;
+    margin-bottom: 15px;
+  }
+  .filter__item:nth-child(3n) {
+    margin-right: 0;
+  }
+  .filter__item:nth-last-child(-n + 2) {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .filter__item:not(:last-child) {
+    margin-right: 8px;
+  }
 }
 
 .filter__button {
