--- a/css/main.css
+++ b/css/main.css
@@ -670,8 +670,42 @@
 }
 
 .gallery__item {
-  margin-right: 30px;
   margin-bottom: 30px;
+}
+
+@media screen and (max-width: 767px) {
+  .gallery__item {
+    width: 450px;
+  }
+  .gallery__item:nth-last-child(-n + 1) {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .gallery__item {
+    width: 354px;
+    margin-right: 30px;
+  }
+  .gallery__item:nth-child(2n) {
+    margin-right: 0px;
+  }
+  .gallery__item:nth-last-child(-n + 2) {
+    margin-bottom: 0px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .gallery__item {
+    width: 370px;
+    margin-right: 30px;
+  }
+  .gallery__item:nth-child(3n) {
+    margin-right: 0px;
+  }
+  .gallery__item:nth-last-child(-n + 1) {
+    margin-bottom: 0px;
+  }
 }
 
 .gallery__link {
