--- a/sass/components/_main-portfolio.scss
+++ b/sass/components/_main-portfolio.scss
@@ -79,8 +79,35 @@
    
 }
 .gallery__item {
-    margin-right: 30px;
+
     margin-bottom: 30px;
+
+    @media screen and (max-width: 767px) {
+        width: 450px;
+        &:nth-last-child(-n + 1) {
+          margin-bottom: 0px;
+        }
+      }
+      @media screen and (min-width: 768px) and (max-width: 1199px) {
+        width: 354px;
+        margin-right: 30px;
+        &:nth-child(2n) {
+          margin-right: 0px;
+        }
+        &:nth-last-child(-n + 2) {
+          margin-bottom: 0px;
+        }
+      }
+      @media screen and (min-width: 1200px) {
+        width: 370px;
+        margin-right: 30px;
+        &:nth-child(3n) {
+          margin-right: 0px;
+        }
+        &:nth-last-child(-n + 1) {
+          margin-bottom: 0px;
+        }
+      }
 }
 .gallery__link {
     display: block;
